--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -258,6 +258,8 @@
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
+        "core_loupedeck_banks_label": "Loupedeck+: Banks",
+        "core_loupedeck_prefs_label": "Preferences: Loupedeck+",
         "core_menu_bottom_label": "Menubar: Bottom Section",
         "core_menu_helpandsupport_commandpost_label": "Menubar: CommandPost Help & Support",
         "core_menu_helpandsupport_label": "Menubar: Help & Support Section",
@@ -544,6 +546,7 @@
         "dockIcon": "Dock Icon",
         "donateToDevelopers": "Paypal Donation to Developers",
         "done": "Done",
+        "down": "Down",
         "downloadTangentHub": "Download Tangent Hub",
         "doYouWantToContinue": "Do you want to continue?",
         "draggable": "Draggable",
@@ -736,6 +739,7 @@
         "finalcutpro_midi_controls_colorwheels_label": "MIDI Controls: Color Wheels",
         "finalcutpro_midi_controls_controlui_absolute_label": "MIDI Controls: Control FCP UI (Absolute)",
         "finalcutpro_midi_controls_controlui_relative_label": "MIDI Controls: Control FCP UI (Relative)",
+        "finalcutpro_midi_controls_timeline_label": "MIDI Controls: Timeline",
         "finalcutpro_midi_controls_video_label": "MIDI Controls: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "MIDI Controls: Timeline Zoom",
         "finalcutpro_midi_manager_label": "Manager: MIDI",
@@ -1012,6 +1016,7 @@
         "loopSearch": "Loop Search",
         "loudness": "Loudness",
         "loudness9": "Loudness",
+        "loupedeckBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckPlus": "Loupedeck+",
         "loupedeckResetAllConfirmation": "This will reset all Loupedeck+ items across all applications to the default values.",
         "loupedeckResetGroupConfirmation": "This will reset all Loupedeck+ items in the current application to the default values.",
@@ -1042,7 +1047,6 @@
         "middle": "Middle",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
-        "loupedeckBankDescription": "Changes the Loupedeck+ Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
         "midiControlColorWheel": "Hold down SHIFT to change value at extended range.",
         "midiControls": "MIDI Controls",
@@ -1336,8 +1340,6 @@
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
         "sCurve": "S-Curve",
         "search": "Search",
-        "up": "Up",
-        "down": "Down",
         "searchAborted": "The search has been aborted.",
         "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so we've aborted it.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
         "searchEntireLibrary": "Search Entire Library",
@@ -1599,6 +1601,7 @@
         "unmountExternalDrives_title": "Unmount External Drives",
         "unmountingExternalDrivesMsg": "Unmounting external drives...",
         "unused": "Unused",
+        "up": "Up",
         "update": "Update",
         "updateAvailable": "Update Available",
         "updateEffectsListFailed": "Unfortunately the Effects List was not successfully updated.",
