User Interface Tweaks
- Increased the height of the Stream Deck, Tangent, Shortcuts & MIDI
Preferences panels
- Renamed “Error Log” to “Debug Console”
- Increased the amount of custom FCPX actions from 20 to 50
- Changed the Touch Bar icon from the colour CP icon to the B&W menubar
icon
- Added a “Check for Updates Now” button in the General Preferences
panel
- Renamed “Check for Updates” to “Automatically Check for Updates”
- Added CP version details to bottom of the menubar
- Removed “Suggest a translation” and “Report a translation mistake”,
and replaced with a button to “Help Translate CommandPost”
- Renamed “Provide Feedback” to "Provide Feedback or Report Bug" and
moved it to the main menubar level
- Closes #1913

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -73,7 +73,7 @@
         "assignAction": "Assign Action",
         "assignHUDButtons": "Assign HUD Buttons",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
-        "attachLog": "Attach the entire contents of the CommandPost Error Log.",
+        "attachLog": "Attach the entire contents of the CommandPost Debug Console.",
         "attachScreenshot": "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
         "audio": "Audio",
         "audioAnalysis": "Audio Analysis",
@@ -82,6 +82,7 @@
         "audioEffect_group": "Audio Effect",
         "audioEnhancements": "Audio Enhancements",
         "automatic": "Automatic",
+        "automaticallyCheckForUpdates": "Automatically Check for Updates",
         "automaticallyImport": "Automatically Import without Notification",
         "automaticKeyframes": "Automatic Keyframes",
         "autoMountOnAC": "Mount external drives when switching to AC power",
@@ -169,7 +170,7 @@
         "channel": "Channel",
         "channelPressure": "Channel Pressure",
         "checkerboard": "Checkerboard",
-        "checkForUpdates": "Check for Updates",
+        "checkForUpdatesNow": "Check for Updates Now",
         "circle": "Circle",
         "circle9": "Circle",
         "clear": "Clear",
@@ -251,9 +252,9 @@
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Disk Favourites",
         "core_helpandsupport_credits_label": "Help & Support: Credits",
+        "core_helpandsupport_debugconsole_label": "Help & Support: Debug Console",
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
         "core_helpandsupport_donate_label": "Help & Support: Donate",
-        "core_helpandsupport_errorlog_label": "Help & Support: Error Log",
         "core_helpandsupport_facebook_label": "Help & Support: Facebook",
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
@@ -394,7 +395,7 @@
         "cpMoveWindowRight_title": "Move Focussed Window: One Screen Right",
         "cpMoveWindowUp_title": "Move Focussed Window: One Screen Up",
         "cpOpenCommandEditor_title": "Open Command Editor",
-        "cpOpenErrorLog_title": "Open Error Log",
+        "cpOpenDebugConsole_title": "Open Debug Console",
         "cpOpenPluginsFolder_title": "Open Plugins Folder",
         "cpPasteTextAsCaption_title": "Paste Text as Caption",
         "cpPause_title": "Pause",
@@ -519,6 +520,7 @@
         "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
+        "debugConsole": "Debug Console",
         "decreaseClipHeight": "Decrease Clip Height",
         "default": "Default",
         "delete": "Delete",
@@ -601,7 +603,6 @@
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
         "environment": "Environment",
         "equalization": "Equalization",
-        "errorLog": "Error Log",
         "eventViewer": "Event Viewer",
         "exactMatch": "Exact Match",
         "exclusion": "Exclusion",
@@ -891,6 +892,7 @@
         "height": "Height",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
+        "helpTranslateCommandPost": "Help Translate CommandPost",
         "hiddenFinalCutProPreferences": "Hidden Final Cut Pro Preferences",
         "hideRejected": "Hide Rejected",
         "high": "High",
@@ -1147,9 +1149,9 @@
         "openAudioMIDISetup": "Open Audio MIDI Setup",
         "openCommandEditor": "Open Command Editor",
         "openContacts": "Open Contacts",
+        "openDebugConsole": "Open Debug Console",
+        "openDebugConsoleOnDockClick": "Open Debug Console on Dock Icon Click",
         "openEmbeddedSpeechCommandsHelp": "Speech Commands Help",
-        "openErrorLog": "Open Error Log",
-        "openErrorLogOnDockClick": "Open Error Log on Dock Icon Click",
         "openFavouriteFolder": "Open Favourite Folder",
         "openMessages": "Open Messages",
         "openPrivacyPolicy": "Open Privacy Policy",
@@ -1251,6 +1253,7 @@
         "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
         "programChange": "Program Change",
         "provideFeedback": "Provide Feedback",
+        "provideFeedbackOrReportBug": "Provide Feedback or Report Bug",
         "prowlAPIKey": "Prowl API Key",
         "prowlMissingAPIKey": "Missing Prowl API Key",
         "prowlMissingAPIKeyMessage": "You must enter a valid Prowl API Key to enable Prowl Notifications.",
