Added actions for Audio Enhancement Toggles
- `cp.ui.checkbox:doPress()` now shows the parent object.
- Closes #1898

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -714,6 +714,7 @@
         "finalcutpro_hud_panels_twentyfourbuttons_label": "HUD: 24 Buttons",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
+        "finalcutpro_inspector_audio_label": "Inspector: Audio",
         "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
         "finalcutpro_inspector_text_label": "Inspector: Text",
         "finalcutpro_inspector_video_label": "Inspector: Video",
