Added actions to toggle audio components & subcomponents

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -227,6 +227,7 @@
         "commandType": "Type",
         "commonErrorMessageEnd": "Would you like to submit a bug report?",
         "commonErrorMessageStart": "The following error has occurred:",
+        "component": "Component",
         "components": "Components",
         "compoundClip": "Compound Clip",
         "compressor": "Compressor",
@@ -1508,6 +1509,7 @@
         "streamDeckResetConfirmation": "This will reset all modified Stream Deck items to the default values.",
         "streamDeckResetGroupConfirmation": "This will reset all the Stream Deck items in the current application to the default values.",
         "streamDeckResetSubGroupConfirmation": "This will reset all the Stream Deck items in the current bank to the default values.",
+        "subcomponent": "Subcomponent",
         "subcomponents": "Subcomponents",
         "subtract": "Subtract",
         "subtract9": "Subtract",
