Create Optimized Media of Selected Clips in Timeline
- “Create Optimized Media of Selected Clips in Timeline” is now working.
- "Create Proxy Media of Selected Clips in Timeline” is now working.
- Fixed bug in `cp.ui.Sheet`.
- `cp.apple.finalcutpro.main.TranscodeMedia` is now functional.
- Closes #1931

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -500,7 +500,9 @@
         "cpZoomToSelection_title": "Zoom to Selection",
         "createMulticamOptimizedMedia": "Create Multicam Optimized Media",
         "createOptimizedMedia": "Create Optimized Media",
+        "createOptimizedMediaOfSelectedClipsInTimeline": "Create Optimized Media of Selected Clips in Timeline",
         "createProxyMedia": "Create Proxy Media",
+        "createProxyMediaOfSelectedClipsInTimeline": "Create Proxy Media of Selected Clips in Timeline",
         "createRoleForVoice": "Assign Voice Role",
         "createSpace": "Create Space",
         "createSpace9": "C Space",
@@ -811,6 +813,7 @@
         "finalcutpro_timeline_renameclip_label": "Timeline: Rename Clip",
         "finalcutpro_timeline_selectalltimelineclips_label": "Timeline: Select All Timeline Clips",
         "finalcutpro_timeline_titles_label": "Timeline: Titles",
+        "finalcutpro_timeline_transcode_label": "Timeline: Transcode",
         "finalcutpro_timeline_transitions_label": "Timeline: Transitions",
         "finalcutpro_timeline_videoeffects_label": "Timeline: Video Effects",
         "finalcutpro_timeline_zoomtoselection_label": "Timeline: Zoom to Selection",
