#1931 * Added Rx code for optimised/proxy transcription. * Not quite functional yet

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -500,9 +500,9 @@
         "cpZoomToSelection_title": "Zoom to Selection",
         "createMulticamOptimizedMedia": "Create Multicam Optimized Media",
         "createOptimizedMedia": "Create Optimized Media",
-        "createOptimizedMediaOfSelectedClipsInTimeline": "Create Optimized Media of Selected Clips in Timeline",
+        "optimizeSelectedMedia": "Create Optimized Media of Selected Clips",
         "createProxyMedia": "Create Proxy Media",
-        "createProxyMediaOfSelectedClipsInTimeline": "Create Proxy Media of Selected Clips in Timeline",
+        "proxySelectedMedia": "Create Proxy Media of Selected Clips",
         "createRoleForVoice": "Assign Voice Role",
         "createSpace": "Create Space",
         "createSpace9": "C Space",
