Added actions for selected effect and individual effects
- Added action for “Toggle Selected Effect”
- Added actions for “Toggle Effect 1-9”
- Added optional `elementFrame` parameter to `cp.axutils.snapshot()`
- Closes #1932

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -500,9 +500,7 @@
         "cpZoomToSelection_title": "Zoom to Selection",
         "createMulticamOptimizedMedia": "Create Multicam Optimized Media",
         "createOptimizedMedia": "Create Optimized Media",
-        "optimizeSelectedMedia": "Create Optimized Media of Selected Clips",
         "createProxyMedia": "Create Proxy Media",
-        "proxySelectedMedia": "Create Proxy Media of Selected Clips",
         "createRoleForVoice": "Assign Voice Role",
         "createSpace": "Create Space",
         "createSpace9": "C Space",
@@ -563,6 +561,7 @@
         "duration": "Duration",
         "ease": "Ease",
         "edit": "Edit",
+        "effect": "Effect",
         "effects": "Effects",
         "eight": "8",
         "emailAddress": "Email Address",
@@ -1163,6 +1162,7 @@
         "openProjectAfterFind": "Open Project After Find",
         "openTangentMapper": "Open Tangent Mapper",
         "openVoiceOverUtility": "Open Voice Over Utility",
+        "optimizeSelectedMedia": "Create Optimized Media of Selected Clips",
         "options": "Options",
         "organize": "Organize",
         "originalClipName": "Original Clip Name",
@@ -1264,6 +1264,7 @@
         "prowlMissingAPIKeyMessage": "You must enter a valid Prowl API Key to enable Prowl Notifications.",
         "prowlNotifications": "Prowl Notifications",
         "proxy": "Proxy",
+        "proxySelectedMedia": "Create Proxy Media of Selected Clips",
         "puck": "Puck",
         "pushover": "Pushover",
         "pushoverNotifications": "Pushover Notifications",
@@ -1370,6 +1371,7 @@
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
         "selectDestinationFolder": "Please select a Destination Folder:",
         "selectDestinationPreset": "Please select a Destination Preset:",
+        "selected": "Selected",
         "selectedColumnNotShown": "The selected column could not be shown.",
         "selectedColumnNotShownDescription": "Please make sure the notes column is visible and try again.",
         "selectedControl": "Selected Control",
