Added actions for Crop & Distort
- Closes #1947

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -507,6 +507,7 @@
         "createStoryline": "Create Storyline",
         "credits": "Credits",
         "crop": "Crop",
+        "cropType": "Crop Type",
         "cropTypes": "Crop Types",
         "crossDissolve": "Cross Dissolve",
         "crossHair": "Cross Hair",
@@ -522,6 +523,7 @@
         "darken": "Darken",
         "darken9": "Darken",
         "debugConsole": "Debug Console",
+        "decrease": "Decrease",
         "decreaseClipHeight": "Decrease Clip Height",
         "default": "Default",
         "delete": "Delete",
@@ -546,6 +548,7 @@
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
         "distance": "Distance",
+        "distort": "Distort",
         "dockIcon": "Dock Icon",
         "donateToDevelopers": "Paypal Donation to Developers",
         "done": "Done",
@@ -940,6 +943,7 @@
         "includeContactInfo": "Include contact info",
         "includeTextInFilename": "Include Entered Text in Filename",
         "incomingFile": "Incoming File...",
+        "increase": "Increase",
         "increaseClipHeight": "Increase Clip Height",
         "individualEffects": "Individual Effects",
         "inertiaCam": "InertiaCam",
