Added action for "Set Viewer to Proxy/Original"
- Closes #1958

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1166,6 +1166,7 @@
         "openProjectAfterFind": "Open Project After Find",
         "openTangentMapper": "Open Tangent Mapper",
         "openVoiceOverUtility": "Open Voice Over Utility",
+        "optimizedOriginal": "Optimized/Original",
         "optimizeSelectedMedia": "Create Optimized Media of Selected Clips",
         "options": "Options",
         "organize": "Organize",
@@ -1403,6 +1404,7 @@
         "settings": "Settings",
         "setupTitle": "CommandPost Setup",
         "setupWatchFolders": "Setup Watch Folders",
+        "setViewerTo": "Set Viewer to",
         "seven": "7",
         "shadows": "Shadows",
         "shadows2": "SD",
