Improved Timeline Batch Export
- Merged “Send to Compressor” and “Share” functions into a single
function to remove duplicate code.
- We now manipulate the mouse position to select the clip range, rather
than manually entering in the timecode values which seems more reliable.
- We now only change the export path if required, speeding up the first
clip we export.
- We now display a dialog box when performing Timeline Batch Export to
better explain to the user exactly what’s happening.
- Removed a bunch of `hs.timer`’s that didn’t seem to be actually doing
anything.
- Added `cp.tools.stringToHexString()`.
- Added `cp.apple.finalcutpro:openAndSavePanelDefaultPath`.
- General code tidy up.
- Closes #1938

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -110,7 +110,8 @@
         "bassReduce9": "Bass -",
         "batchExport": "Batch Export",
         "batchExportActiveTimeline": "Batch Export Active Timeline",
-        "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
+        "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips have been added to your Final Cut Pro export queue.",
+        "batchExportCompressorComplete": "Batch Export is now complete.\n\nThe selected clips have been added to your Compressor Batch ready for processing.",
         "batchExportDestinationDisabled": "The Target destination you have selected is disabled in the menubar, which has aborted the Batch Export.\n\nPlease try again.",
         "batchExportFromTimeline": "Batch Export from Timeline",
         "batchExportInvalidCaptionsDetected": "Captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nInvalid Captions can be ignored via the Batch Export Preferences if required.",
@@ -1555,6 +1556,8 @@
         "threeDeeText": "3D Text",
         "timeline": "Timeline",
         "timeline_group": "Timeline",
+        "timelineBatchExportBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Share' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
+        "timelineBatchExportCompressorBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Send to Compressor' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
         "tint": "Tint",
