Added MIDI Control for Trim Toggle

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1354,6 +1354,8 @@
         "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
+        "scrubTimeline": "Scrub Timeline",
+        "scrubTimelineDescription": "Allows you to move the playhead one frame left or right.",
         "sCurve": "S-Curve",
         "search": "Search",
         "searchAborted": "The search has been aborted.",
@@ -1606,6 +1608,8 @@
         "trebleReduce": "Treble Reduce",
         "trebleReduce9": "Treble -",
         "trim": "Trim",
+        "trimToggle": "Trim Toggle",
+        "trimToggleDescription": "Hold down MIDI button for Trim Tool, then release for Select Tool.",
         "trimToPlayhead": "Trim To Playhead",
         "turnLeftDown": "Turn Left/Down",
         "turnRightUp": "Turn Right/Up",
