Added action for "Play Full Screen & Stop"
- Closes #7

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -706,6 +706,7 @@
         "finalcutpro_fullscreen_disableesc_label": "Disable ESC Key when Final Cut Pro is Fullscreen",
         "finalcutpro_fullscreen_dockicon_label": "Full Screen Dock Icon Manager",
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
+        "finalcutpro_fullscreen_stopped_label": "Play Full Screen & Stop",
         "finalCutPro_group": "Final Cut Pro",
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_hud_manager_label": "HUD: Manager",
@@ -1210,6 +1211,7 @@
         "playback": "Playback",
         "playFromBeginning": "Play From Beginning",
         "playFullScreen": "Play Full Screen",
+        "playFullScreenAndStop_title": "Play Full Screen & Stop",
         "playPowerChimeSound": "Play chime sound when laptop power is connected",
         "playSelection": "Play Selection",
         "playToEnd": "Play to End",
