Added Caffeinate option to menubar
- Removed the Final Cut Pro specific “Tools” menubar section.
- Added a core “Tools” menubar section, which now contains the Final
Cut Pro HUD.
- Closes #1985

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -155,6 +155,7 @@
         "buttonLabel": "Button Label",
         "buttonPress": "Button Press",
         "buttons": "Buttons",
+        "caffeinate": "Caffeinate",
         "cancel": "Cancel",
         "center": "Center",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
