Tweaked language string

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -97,8 +97,8 @@
         "backToFront9": "Bak2Front",
         "backupInterval": "Backup Interval",
         "backupMinimumDuration": "Backup Minimum Duration",
-        "badStreamDeckIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Stream Deck icons.",
-        "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
+        "badStreamDeckIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are allowed as Stream Deck icons.",
+        "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are allowed as Touch Bar icons.",
         "bank": "Bank",
         "basic": "Basic",
         "basicGrid": "Basic Grid",
