--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -29,12 +29,11 @@
         "advanced": "Advanced",
         "advancedFeatures": "Advanced Features",
         "advancedFeaturesWarning": "The below options are hidden Final Cut Pro preferences.<br />If enabled, they'll remain enabled even if CommandPost is not running.<br />Trashing your Final Cut Pro preferences will reset these preferences too.<br />Please use with care, as there's a reason Apple hasn't exposed them.",
-        "advancedPanelLabel": "Advanced",
-        "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
         "alignment": "Alignment",
         "alignTextToTheCentre_title": "Align text to the centre",
         "alignTextToTheLeft_title": "Align text to the left",
+        "noKeyboardShortcutsInKeywordEditor": "There doesn't appear to be any Keyword Shortcuts allocated in the Keyword Editor.",
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
         "allCaps": "All Caps",
@@ -71,7 +70,6 @@
         "appVersion": "Version",
         "areYouConnectedToTheInternet": "Are you actually connected to the Internet?",
         "assignAction": "Assign Action",
-        "assignHUDButtons": "Assign HUD Buttons",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
         "attachLog": "Attach the entire contents of the CommandPost Debug Console.",
         "attachScreenshot": "Attach a screenshot of all of your screens, taken just before this feedback form appeared.",
@@ -223,9 +221,7 @@
         "commandChoiceSubText": "Command: %{group}",
         "commandEditorShortcut": "Command Editor Shortcut",
         "commandLineTool": "Command Line Tool",
-        "commandLineToolDescription": "When the Command Line Tool is installed, you can use <strong>cmdpost</strong> in Terminal to trigger Lua code. Please refer to the User Guide for more information.",
         "commandPost_group": "CommandPost",
-        "commandPostLanguage": "CommandPost Language",
         "commandType": "Type",
         "commonErrorMessageEnd": "Would you like to submit a bug report?",
         "commonErrorMessageStart": "The following error has occurred:",
@@ -524,7 +520,6 @@
         "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
-        "debugConsole": "Debug Console",
         "decrease": "Decrease",
         "decreaseClipHeight": "Decrease Clip Height",
         "default": "Default",
@@ -575,7 +570,6 @@
         "enable": "Enable",
         "enableAccessibility": "Enable Accessibility",
         "enableAppleScriptSupport": "Enable AppleScript Support",
-        "enableAutomaticScriptReloading": "Enable Automatic Script Reloading",
         "enableBackgroundRender": {
             "one": "Enable Background Render (%{count} sec)",
             "other": "Enable Background Render (%{count} secs)"
@@ -583,7 +577,6 @@
         "enableCommandLineSupport": "Enable Command Line Support",
         "enableCustomisedTouchBar": "Enable Customised Touch Bar",
         "enabled": "Enabled",
-        "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
         "enableDockIcon": "Enable Dock Icon",
         "enableFilenamePrefix": "Enable Filename Prefix",
@@ -920,15 +913,14 @@
         "horizontal4": "Horz",
         "howCanWeHelp": "How can we help you?",
         "hud": "HUD",
-        "hudButtonItem": "Button %{count} (%{title})",
         "hudDropZoneText": "Drag any item from the Browser to here to load it in the below FCPXML Editor",
-        "hudOptions": "HUD Options",
         "hue": "Hue",
         "hue4": "Hue",
         "humReduction": "Hum Reduction",
         "humReduction9": "Hum -",
         "humRemoval": "Hum Removal",
         "icon": "Icon",
+        "identification": "Identification",
         "ignore": "Ignore",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
@@ -1019,8 +1011,6 @@
         "linearDodge9": "LinDodg",
         "linearLight": "Linear Light",
         "linearLight9": "LinLight",
-        "listenMMC": "Listen to MMC Input",
-        "listenMTC": "Listen to MTC Input",
         "loadFromPasteboard": "Load from Pasteboard",
         "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
@@ -1045,7 +1035,6 @@
         "match": "Match",
         "matchCase": "Match Case",
         "matchColor": "Match Color",
-        "matchWords": "Match Words",
         "mattes": "Mattes",
         "media": "Media",
         "mediaImport": "Media Import",
@@ -1065,13 +1054,11 @@
         "midiControlColorWheel": "Hold down SHIFT to change value at extended range.",
         "midiControls": "MIDI Controls",
         "midiEditor": "MIDI Editor",
-        "midiMachineControl": "MIDI Machine Control (MMC)",
         "midiResetAll": "Reset All Applications",
         "midiResetAllConfirmation": "This will reset all MIDI items across all applications to the default values.",
         "midiResetGroup": "Reset Selected Application",
         "midiResetGroupConfirmation": "This will reset all MIDI items in the current application to the default values.",
         "midiResetSubGroupConfirmation": "This will reset all MIDI items in the current bank to the default values.",
-        "midiTimecode": "MIDI Time Code (MTC)",
         "midiTimelineZoomDescription": "Allows you to control timeline zoom via MIDI controls.",
         "midiTools": "MIDI Tools",
         "midiTopDeviceToAll": "This will apply the MIDI device on the top of the list to all the subsequent lines for the current application.",
@@ -1168,6 +1155,7 @@
         "openPrivacyPolicy": "Open Privacy Policy",
         "openProjectAfterFind": "Open Project After Find",
         "openTangentMapper": "Open Tangent Mapper",
+        "openUserSettingsFolder": "Open User Settings Folder",
         "openVoiceOverUtility": "Open Voice Over Utility",
         "optimizedOriginal": "Optimized/Original",
         "optimizeSelectedMedia": "Create Optimized Media of Selected Clips",
@@ -1287,12 +1275,10 @@
         "rectangle": "Rectangle",
         "red": "Red",
         "redo": "Redo",
-        "refreshMidi": "Refresh MIDI Devices",
         "rejected": "Rejected",
         "relative": "Relative",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
-        "removeFromList": "Remove from List",
         "renameButton": "Rename Button",
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renderComplete": "Render Complete!",
@@ -1300,7 +1286,6 @@
         "replaceAll": "Replace All",
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
-        "reportATranslationMistake": "Report a Translation Mistake",
         "reportCompressorBugToApple": "Report Compressor Bug to Apple",
         "reportFinalCutProBugToApple": "Report Final Cut Pro Bug to Apple",
         "reportMotionBugToApple": "Report Motion Bug to Apple",
@@ -1408,6 +1393,7 @@
         "setIncrementalNumberMessage": "What would you like to set the Incremental Number to?",
         "setPlayerBackgroundTo": "Set Player Background to",
         "settings": "Settings",
+        "settingsDescription": "In a future release of CommandPost we will have a proper import/export feature for settings. In the meantime...",
         "setupTitle": "CommandPost Setup",
         "setupWatchFolders": "Setup Watch Folders",
         "setViewerTo": "Set Viewer to",
@@ -1477,13 +1463,10 @@
         "shortcutsSetNoneConfirmation": "This will reset all of the shortcuts to None.",
         "show": "Show",
         "showAll": "Show All",
-        "showButtons": "Show Buttons",
-        "showDropTargets": "Show Drop Targets",
         "showGenerators": "Show Generators",
         "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
         "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
         "showHorizon": "Show Horizon",
-        "showInspector": "Show Inspector",
         "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
         "showTheAdvancedEqualizerUI": "Show the Advanced Equalizer UI",
         "showTheAdvancedEqualizerUI9": "Show EQ",
@@ -1502,7 +1485,6 @@
         "softLight9": "SoftLight",
         "softness": "Softness",
         "sound": "Sound",
-        "spacing": "Spacing",
         "stabilizationMethod": "Stabilization Method",
         "start": "Start",
         "startScan": "Start Scan",
@@ -1532,7 +1514,6 @@
         "subtract9": "Subtract",
         "subtractive": "Subtractive",
         "success": "Success",
-        "suggestATranslation": "Suggest A New Language",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
         "suggestFinalCutProFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
         "suggestMotionFeatureToApple": "Suggest Motion Feature to Apple",
@@ -1540,6 +1521,8 @@
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
         "tag": "Tag",
+        "tangent": "Tangent",
+        "tangentFavouriteDescription": "You can assign any action in CommandPost to a Favourite below, which is then accessible in the Tangent Mapper.",
         "tangentFinalCutProShortcutFailed": "There is no shortcut key applied to this command, so the command cannot be triggered.\n\nPlease open up the Final Cut Pro Command Editor and assign a shortcut key to the command, then try again.",
         "tangentMapperNotFound": "Tangent Mapper Not Found",
         "tangentMapperNotFoundMessage": "The Tangent Mapper application could not be found.\n\nPlease download the latest version from the Tangent website and try again.",
@@ -1603,9 +1586,6 @@
         "transform": "Transform",
         "transition": "Transition",
         "transition_group": "Transition",
-        "transmitMMC": "Transmit MMC",
-        "transmitMTC": "Transmit MTC",
-        "trashPreferences": "Trash Preferences",
         "trebleBoost": "Treble Boost",
         "trebleBoost9": "Treble +",
         "trebleReduce": "Treble Reduce",
@@ -1621,7 +1601,6 @@
         "typeDateAndTime_title": "Type Date & Time",
         "typeface": "Typeface",
         "types": "Types",
-        "unassigned": "Unassigned",
         "undo": "Undo",
         "uninstall": "Uninstall",
         "unknown": "Unknown",
