Sorted English Language JSON & Added Missing Values

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -33,7 +33,6 @@
         "alignment": "Alignment",
         "alignTextToTheCentre_title": "Align text to the centre",
         "alignTextToTheLeft_title": "Align text to the left",
-        "noKeyboardShortcutsInKeywordEditor": "There doesn't appear to be any Keyword Shortcuts allocated in the Keyword Editor.",
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
         "allCaps": "All Caps",
@@ -69,6 +68,8 @@
         "appName": "CommandPost",
         "appVersion": "Version",
         "areYouConnectedToTheInternet": "Are you actually connected to the Internet?",
+        "areYouSureTheresSomethingOnThePasteboard": "Are you sure there's something in the Final Cut Pro Pasteboard?",
+        "areYouSureTheXMLIsValid": "Are you sure the XML is valid?",
         "assignAction": "Assign Action",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
         "attachLog": "Attach the entire contents of the CommandPost Debug Console.",
@@ -603,6 +604,8 @@
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
         "environment": "Environment",
         "equalization": "Equalization",
+        "errorProcessingThePasteboard": "There was an error processing the Pasteboard.",
+        "errorWritingToPasteboard": "There was an error writing to the Pasteboard.",
         "eventViewer": "Event Viewer",
         "exactMatch": "Exact Match",
         "exclusion": "Exclusion",
@@ -615,6 +618,7 @@
         "fadeInType": "Fade In Type",
         "fadeOutType": "Fade Out Type",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
+        "failedToSwitchBackToFinalCutPro": "Failed to switch back to Final Cut Pro.",
         "family": "Family",
         "favorites": "Favorites",
         "favourite": "Favourite",
@@ -1111,6 +1115,7 @@
         "noFCPUIElementDetected": "No existing Final Cut Pro User Interface Element Registered",
         "noGeneratorShortcut": "There is no Generator assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
         "noiseRemoval": "Noise Removal",
+        "noKeyboardShortcutsInKeywordEditor": "There doesn't appear to be any Keyword Shortcuts allocated in the Keyword Editor.",
         "noKeywordPresetsError": "It doesn't look like you've saved anything to this keyword preset yet?",
         "noMatchesFound": "No matches found.",
         "noMatchesFoundDescription": "We couldn't find any matches for the string you searched for. Please make sure all the rows you want to search are visible in the browser.",
@@ -1368,6 +1373,7 @@
         "selectDestinationFolder": "Please select a Destination Folder:",
         "selectDestinationPreset": "Please select a Destination Preset:",
         "selected": "Selected",
+        "selectedClipDoesntOfferAnyTextAlignmentOptions": "The selected clip doesn't offer any Text Alignment options.",
         "selectedColumnNotShown": "The selected column could not be shown.",
         "selectedColumnNotShownDescription": "Please make sure the notes column is visible and try again.",
         "selectedControl": "Selected Control",
@@ -1535,6 +1541,7 @@
         "ten": "10",
         "testTitle": "CommandPost Test",
         "text": "Text",
+        "textInspectorCouldNotBeShown": "Text Inspector could not be shown.",
         "textLayer": "Text Layer",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
@@ -1546,6 +1553,7 @@
         "timeline_group": "Timeline",
         "timelineBatchExportBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Share' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
         "timelineBatchExportCompressorBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Send to Compressor' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
+        "timelineCouldNotBeShown": "Timeline could not be shown.",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
         "tint": "Tint",
