Added action for "Open Recent Project Starting With 1-9"
- Added missing label for Caffeinate plugin.
- Closes #2002

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -303,6 +303,7 @@
         "core_tangent_os_sound_label": "Tangent: macOS Sound Controls",
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
+        "core_tools_caffeinate_label": "Caffeinate",
         "core_touchbar_banks_label": "Touchbar: Banks",
         "core_touchbar_manager_label": "Manager: Touch Bar",
         "core_touchbar_prefs_label": "Preferences: Touch Bar",
@@ -808,6 +809,7 @@
         "finalcutpro_timeline_mousezoom_label": "Timeline: Mouse Zoom",
         "finalcutpro_timeline_movetoplayhead_label": "Timeline: Move to Playhead",
         "finalcutpro_timeline_multicam_label": "Timeline: Multicam",
+        "finalcutpro_timeline_navigation_label": "Timeline: Navigation",
         "finalcutpro_timeline_playback_label": "Timeline: Playback",
         "finalcutpro_timeline_playhead_label": "Timeline: Playhead",
         "finalcutpro_timeline_pluginactions_label": "Timeline: Plugin Actions",
@@ -1159,6 +1161,7 @@
         "openMessages": "Open Messages",
         "openPrivacyPolicy": "Open Privacy Policy",
         "openProjectAfterFind": "Open Project After Find",
+        "openRecentProjectStartingWith": "Open Recent Project Starting With",
         "openTangentMapper": "Open Tangent Mapper",
         "openUserSettingsFolder": "Open User Settings Folder",
         "openVoiceOverUtility": "Open Voice Over Utility",
