Added actions for "Append/Replace Selected Title Text with Pasteboard Contents"
- Closes #2009

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -56,6 +56,7 @@
         "anisotropic": "Anisotropic",
         "apiKeysValidated": "Your API keys you entered have been successfully validated.",
         "appearance": "Appearance",
+        "appendSelectedTitleTextwithPasteboardContents": "Append Selected Title Text with Pasteboard Contents",
         "apple": "Apple",
         "appleFeedbackAssistant": "Apple Feedback Assistant",
         "application": "Application",
@@ -1293,6 +1294,7 @@
         "replace": "Replace",
         "replaceAll": "Replace All",
         "replaceExistingFiles": "Replace Existing Files",
+        "replaceSelectedTitleTextwithPasteboardContents": "Replace Selected Title Text with Pasteboard Contents",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
         "reportCompressorBugToApple": "Report Compressor Bug to Apple",
         "reportFinalCutProBugToApple": "Report Final Cut Pro Bug to Apple",
