Added action for "Focus on Title Text in Inspector"
- Added `cp.ui.TextArea.focused`
- Closes #2019

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -853,6 +853,7 @@
         "five": "5",
         "flat": "Flat",
         "flat9": "Flat",
+        "focusOnTitleTextInInspector": "Focus on Title Text in Inspector",
         "folder": "Folder",
         "font": "Font",
         "forward": "Forward",
