Renamed "Vertical Timeline Scroll" MIDI control to "Horizontal Timeline Scroll"
- Updated "Horizontal Timeline Scroll" to use
`fcp:timeline():contents():horizontalScrollBarUI()`
- Closes #2023

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -919,6 +919,8 @@
         "historyIsEmpty": "History is empty",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
+        "horizontalTimelineScroll": "Horizontal Timeline Scroll",
+        "horizontalTimelineScrollDescription": "Scrolls the timeline horizontally using 7-bit or 14-bit MIDI commands.",
         "howCanWeHelp": "How can we help you?",
         "hud": "HUD",
         "hudDropZoneText": "Drag any item from the Browser to here to load it in the below FCPXML Editor",
@@ -1640,8 +1642,6 @@
         "version": "Version",
         "vertical": "Vertical",
         "vertical4": "Vert",
-        "verticalTimelineScroll": "Vertical Timeline Scroll",
-        "verticalTimelineScrollDescription": "Scrolls the timeline vertically using 7-bit or 14-bit MIDI.",
         "video": "Video",
         "videoEffect_group": "Video Effect",
         "videoWaveform": "Video Waveform",
