Labelled Keyboard Shortcut Actions & created new actions that will work with MIDI
- Added a “Keyboard Shortcut” label to actions that are designed to
only work with keyboard shortcuts (i.e. actions where you can hold down
a key and the action will repeat) - specifically Color Board actions &
Timeline Clip Height.
- Fixed bug in Color Board reset actions for specific aspects - this
code was missing a `whenActivated()` function!
- Closes #2042
- Closes #2031

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -332,8 +332,6 @@
         "cpCenterCursor_title": "Center Cursor on Focussed Window",
         "cpChangeBackupInterval_title": "Change Backup Interval",
         "cpChangeSmartCollectionsLabel_title": "Change Smart Collections Label",
-        "cpChangeTimelineClipHeightDown_title": "Timeline Clip Height Decrease",
-        "cpChangeTimelineClipHeightUp_title": "Timeline Clip Height Increase",
         "cpConsole_title": "Activate Console",
         "cpCopyWithCustomLabel_title": "Copy with Custom Label",
         "cpCopyWithCustomLabelAndFolder_title": "Copy with Custom Label and Folder",
@@ -986,6 +984,8 @@
         "justifyLastRight_title": "Justify last right",
         "kenBurns": "Ken Burns",
         "key": "Key",
+        "keyboardShortcut": "Keyboard Shortcut",
+        "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
@@ -1561,6 +1561,7 @@
         "timeline_group": "Timeline",
         "timelineBatchExportBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Share' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
         "timelineBatchExportCompressorBeginMessage": "This Timeline Batch Export Tool uses automation to select each clip individually, then triggers the 'File > Send to Compressor' menu item.\n\nPlease do not move the mouse or touch the keyboard until this process is complete.",
+        "timelineClipHeight": "Timeline Clip Height",
         "timelineCouldNotBeShown": "Timeline could not be shown.",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
